crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__statements__success__anonymous_sub_with_prototype.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  SUB_DEF
    `sub` "sub"
    SUB_NAME
      identifier "f"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          ANON_SUB_EXPR
            `sub` "sub"
            SUB_SIGNATURE
              `(` "("
              LIST_EXPR
              `)` ")"
            BLOCK
              `{` "{"
              EXPR_STMT
                LIST_EXPR
                  LITERAL
                    number "0"
              `}` "}"
      `}` "}"
