crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__statements__success__given_basic.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  GIVEN_STMT
    `given` "given"
    PAREN_EXPR
      `(` "("
      LIST_EXPR
        SCALAR_VAR
          `$` "$"
          identifier "variable"
      `)` ")"
    BLOCK
      `{` "{"
      WHEN_CLAUSE
        `when` "when"
        PAREN_EXPR
          `(` "("
          LIST_EXPR
            LITERAL
              string literal "'foo'"
          `)` ")"
        BLOCK
          `{` "{"
          EXPR_STMT
            LIST_EXPR
              LIST_CALL_EXPR
                SUB_NAME
                  identifier "say"
                LIST_EXPR
                  LITERAL
                    string literal "'It was foo'"
            `;` ";"
          `}` "}"
      WHEN_CLAUSE
        `when` "when"
        PAREN_EXPR
          `(` "("
          LIST_EXPR
            LITERAL
              string literal "'bar'"
          `)` ")"
        BLOCK
          `{` "{"
          EXPR_STMT
            LIST_EXPR
              LIST_CALL_EXPR
                SUB_NAME
                  identifier "say"
                LIST_EXPR
                  LITERAL
                    string literal "'It was bar'"
            `;` ";"
          `}` "}"
      DEFAULT_CLAUSE
        `default` "default"
        BLOCK
          `{` "{"
          EXPR_STMT
            LIST_EXPR
              LIST_CALL_EXPR
                SUB_NAME
                  identifier "say"
                LIST_EXPR
                  LITERAL
                    string literal "'It was something else'"
            `;` ";"
          `}` "}"
      `}` "}"
