crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__statements__success__lexical_sub_definitions.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  SUB_DEF
    `my` "my"
    `sub` "sub"
    SUB_NAME
      identifier "foo"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          LITERAL
            number "42"
      `}` "}"
  SUB_DEF
    `state` "state"
    `sub` "sub"
    SUB_NAME
      identifier "bar"
    SUB_SIGNATURE
      `(` "("
      LIST_EXPR
        SIGNATURE_PARAM
          `$` "$"
      `)` ")"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          ARRAY_SUBSCRIPT_EXPR
            SCALAR_VAR
              `$` "$"
              identifier "_"
            `[` "["
            SUBSCRIPT
              LITERAL
                number "0"
            `]` "]"
      `}` "}"
  SUB_DEF
    `our` "our"
    `sub` "sub"
    SUB_NAME
      identifier "baz"
    ATTR
      `:` ":"
      SUB_NAME
        identifier "method"
    ATTR
      `:` ":"
      SUB_NAME
        identifier "Attr"
      ATTR_ARGS
        `(` "("
        raw text "1"
        `)` ")"
    BLOCK
      `{` "{"
      `}` "}"
